fix(DynamicTable): update ui for more space  on mobile

--- a/frontend/src/components/ui/custom/dynamic-table.css
+++ b/frontend/src/components/ui/custom/dynamic-table.css
@@ -1,11 +1,4 @@
 /* =========================
-     Table Container
-  ========================== */
-.table-container {
-  @apply overflow-x-auto w-full rounded-card shadow-card border border-border;
-}
-
-/* =========================
      Table
   ========================== */
 .table {
